--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
+    "face-api.js": "^0.22.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
