--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
+    "@tensorflow/tfjs": "^4.20.0",
+    "@tensorflow/tfjs-node": "^4.20.0",
     "axios": "^1.7.2",
     "face-api.js": "^0.22.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.14.1"
