face detection change for python & fast api

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,5 @@
-Flask
-python-dotenv
-opencv-python==4.9.0.80
-opencv-python-headless
-numpy<2
-flask_cors
+fastapi
+uvicorn
+opencv-python
+numpy
+python-multipart
